# sil

./: Cargo.toml  LICENSE  README.md  build.rs  flake.nix
.cargo/: config.toml
assets/: deploy.ps1  deploy.sh  pre-commit.ps1  pre-commit.py  pre-commit.sh
src/: config.rs  event.rs  main.rs  state.rs  text.rs
