[package]
name = "sil"
version = "2.0.0"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2018"

[build-dependencies]
git2 = "0.13"

[build-dependencies.derive_more]
version = "0.99"
default-features = false
features = ["from"]

[dependencies]
async-trait = "0.1"
enum-iterator = "0.7"
futures = "0.3"
image = "0.23"
serde_json = "1"
xdg-basedir = "1"

[dependencies.async-proto]
version = "0.9"
features = ["tokio-tungstenite"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.chrono-tz]
version = "0.6"
features = ["serde"]

[dependencies.derive_more]
version = "0.99"
default-features = false
features = ["from"]

[dependencies.gefolge-websocket]
git = "https://github.com/dasgefolge/gefolge-websocket"
branch = "main"

[dependencies.ggez]
version = "0.6"
default-features = false

[dependencies.rand]
version = "0.8"
default-features = false
features = ["small_rng"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls", "json"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.structopt]
version = "0.3"
features = ["paw"]

[dependencies.tokio]
version = "1"
features = ["fs", "macros", "process", "rt-multi-thread", "time"]

[dependencies.tokio-tungstenite]
version = "0.15"
features = ["rustls-tls"]

[dependencies.wheel]
git = "https://github.com/fenhl/wheel"
branch = "main"

[dependencies.winit]
version = "0.25"
default-features = false
