[package]
name = "sil"
version = "2.0.0"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2021"

[build-dependencies]
git2 = "0.15"
thiserror = "1"

[dependencies]
async-trait = "0.1"
enum-iterator = "1"
futures = "0.3"
image = "0.23" # transitive ggez dependency
itertools = "0.10"
serde_json = "1"
thiserror = "1"
xdg-basedir = "1"

[dependencies.async-proto]
version = "0.15"
features = ["tokio-tungstenite"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.chrono-tz]
version = "0.6"
features = ["serde"]

[dependencies.clap]
version = "3"
features = ["derive"]

[dependencies.gefolge-websocket]
git = "https://github.com/dasgefolge/gefolge-websocket"
branch = "main"

[dependencies.ggez]
version = "0.7"
default-features = false

[dependencies.rand]
version = "0.8"
default-features = false
features = ["small_rng"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls", "json"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["fs", "macros", "process", "rt-multi-thread", "sync", "time"]

[dependencies.tokio-tungstenite]
version = "0.17"
features = ["rustls-tls-webpki-roots"]

[dependencies.wheel]
git = "https://github.com/fenhl/wheel"
branch = "main"
