[package]
name = "sil"
version = "2.0.3"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2021"

[lints.rust]
rust_2018_idioms = "deny"
unsafe_code = "forbid"
unused = "deny"
unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
warnings = "deny"

[profile.release]
codegen-units = 1
lto = true
strip = true

[features]
nixos = []

[dependencies]
async-proto = { version = "0.26", features = ["tokio-tungstenite027"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.10", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
enum-iterator = "1"
fontdue = "0.9"
futures = "0.3"
gefolge-web-lib = { git = "https://github.com/dasgefolge/gefolge.org", branch = "main" }
if_chain = "1"
itertools = "0.10"
png = "0.17"
rand = { version = "0.8", default-features = false, features = ["small_rng"] }
raw-window-handle = "0.6.0"
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "macos-system-configuration", "rustls-tls", "json"] }
semver = "1.0.26"
serde = { version = "1", features = ["derive"] }
softbuffer = "0.4"
text = { git = "https://github.com/fenhl/text", branch = "main" }
thiserror = "1"
tiny-skia = "0.11"
tokio = { version = "1", features = ["fs", "macros", "process", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.27", features = ["rustls-tls-webpki-roots"] }
wheel = { git = "https://github.com/fenhl/wheel", branch = "main", features = ["chrono", "reqwest", "serde_json"] }
winit = "0.30"

[target.'cfg(windows)'.dependencies]
directories = "4"

[target."cfg(unix)".dependencies]
xdg = "3"
